# trading-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  THIRD-PARTY-LICENSES  WORKSHOP-GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
demo/: README.md
demo/lab1-bad-deployment/: README.md  fix.sh  inject.sh
demo/lab1-dockerfile-bad-image/: README.md  fix.sh  inject.sh
demo/lab2-iam-policy-deleted/: README.md  fix.sh  inject.sh  lambda_function.py
demo/lab2-service-endpoint/: README.md  fix.sh  inject.sh
demo/lab3-bad-code-commit/: README.md  fix.sh  inject.sh
demo/lab4-service-endpoint/: README.md  fix.sh  inject.sh
demo/optional-github/scenario-a-bad-build/: README.md  fix.sh  inject.sh
demo/optional-github/scenario-b-bad-code-commit/: README.md  fix.sh  inject.sh
demo/optional-github/scenario-c-service-endpoint/: README.md  fix.sh  inject.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/components/: AlertsView.tsx  Chart.tsx  Dashboard.tsx  LandingPage.tsx  LiveMarket.tsx  OrderForm.tsx  OrdersView.tsx  RecentTrades.tsx  StatsRow.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useSessionId.ts  useWebSocket.ts
infra/: app.py  cdk.context.json  cdk.json  trading_stack.py
infra/lambda/: devops_agent_webhook.py
libs/common/: pyproject.toml
libs/common/trading_common/: __init__.py  constants.py  exceptions.py  models.py
scripts/: localstack-init.sh
services/alert/: Dockerfile  pyproject.toml
services/alert/app/: __init__.py  config.py  main.py
services/alert/app/core/: __init__.py  alert_monitor.py
services/alert/tests/: test_alert_monitor.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: __init__.py  main.py
services/market-data/: Dockerfile  README.md  pyproject.toml
services/market-data/app/: __init__.py  config.py  main.py  state.py
services/market-data/app/api/: __init__.py  health.py  routes.py
services/market-data/app/core/: __init__.py  candle_aggregator.py  market_hours.py  simulation_engine.py  tick_generator.py
services/market-data/app/repository/: __init__.py  dynamodb_repository.py  redis_publisher.py  s3_repository.py
services/market-data/tests/: conftest.py  test_api_routes.py  test_candle_aggregator.py  test_dynamodb_repository.py  test_market_hours.py  test_redis_publisher.py  test_tick_generator.py
services/order/: Dockerfile  README.md  pyproject.toml
services/portfolio/: Dockerfile  README.md  pyproject.toml
services/portfolio/app/: __init__.py  config.py  main.py  state.py
services/portfolio/app/api/: __init__.py  routes.py
services/portfolio/app/core/: __init__.py  portfolio_manager.py
services/portfolio/app/db/: __init__.py  models.py  session.py
services/portfolio/tests/: conftest.py  test_portfolio_manager.py
services/ws-gateway/: Dockerfile  pyproject.toml
services/ws-gateway/app/: __init__.py  main.py
setup/: config.env.example  deploy-lab-infra.sh  deploy.yml.template  generate-pipeline.sh  teardown-lab-infra.sh
(+24 files in other folders)
