[project]
name = "trading-common"
version = "0.1.0"
description = "Shared models, constants, and utilities for the trading application"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_common"]
